--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -8,15 +8,14 @@
     height: 30rem;
     align-items: center;
     margin: auto;
-    
 }
-#signup-card{
+#signup-card {
     height: 43rem;
     padding-left: 45px;
     padding-right: 45px;
 }
 
-.form-group{
+.form-group {
     margin-top: 35px;
 }
 
@@ -24,15 +23,14 @@
     background-color: #35d187;
     padding: 50px;
     height: 9999px;
-    
 }
-.main-signup{
+.main-signup {
     background-color: #35d187;
     padding: 50px;
     height: 100%;
 }
 
-.btn{
+.btn {
     background-color: #35d187;
     border: 0;
     margin-top: 60px;
@@ -40,39 +38,56 @@
     border-radius: 10px;
 }
 
-.forgot-password{
+.forgot-password {
     font-size: x-small;
 }
 
-.form-control{
+.form-control {
     border-color: #35d187;
     border-width: 2px;
     border-radius: 10px;
 }
 
-.heading3{
+.heading3 {
     color: #35d187;
     margin-top: 10px;
     margin-left: 50px;
-
 }
 
+#header {
+    background: url(../images/banner.jpg) center center / cover no-repeat;
+    height: auto;
+    width: 100%;
+    border-radius: 0;
+    margin-bottom: 0;
+}
+.header {
+    background: url(../images/banner.jpg) center center / cover no-repeat;
+    height: auto;
+    width: 100%;
+}
 
 .green-service {
     background-color: #35d187;
     font-size: 25px;
-   text-align: center;
-    color:#fff;
+    text-align: center;
+    color: #fff;
+}
+
+.whiteservice{
+    height: auto;
+    background-color: #fff;
+    margin: 30px;
 }
 
 /* footer */
 .page-footer {
-	background-color: #222;
-	color: #ccc;
-	padding: 60px 0 30px;
+    background-color: #222;
+    color: #ccc;
+    padding: 60px 0 30px;
 }
 
 .footer-copyright {
-	color: #666;
-	padding: 40px 0;
+    color: #666;
+    padding: 40px 0;
 }
