--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -1,3 +1,7 @@
+/* .body{
+    padding:10%
+} */
+
 .form-style {
     border-radius: 5px;
     margin: 10px;
@@ -74,49 +78,58 @@
     color: #fff;
 }
 
-.whiteservice{
+.white-services {
     height: auto;
-    background-color: #fff;
     margin: 30px;
+    padding-left: 100px;
 }
 
-.roundedCircle{
+.roundedCircle {
     border-width: 1px;
 }
 /* footer */
-body {
+/* body {
     font-family: Rubik,Arial,sans-serif;
       font-weight: 400;
       font-size: 1rem;
       overflow-x: hidden;
       color: #607289;
-  }
-  
-  h5 {
-      font-size: 1rem;
-      line-height: 1.375;
-    font-family: Rubik,Arial,sans-serif;
-      font-weight: 500;
-      color: #fff;
-  }
-  
-  a {
+  } */
+
+/* .footer {
+    font-size: 1rem;
+    line-height: 1.375;
+    font-weight: 400;
+    color: #fff;
+    padding-bottom: 100;
+} */
+
+a {
     color: #fff;
     font-weight: 500;
     text-decoration: none;
     background-color: transparent;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     color: #007bff;
     text-decoration: none;
-  }
-  
-  footer {
-    background: #707070;
-  }
+}
 
-.whoWeAre{
-  background-color: "#e8e8e8";
-  
+footer {
+    background: #707070;
+    color: #fff;
+    padding-bottom: 100px;
+}
+
+.whoWeAre {
+    background-color: #e8e8e8;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 100px;
+}
+.howItWorks {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 100px;
 }
