--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -144,3 +144,132 @@ span{
 h5{
     margin-top: 1px;
 }
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    float:right;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {display:none;}
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input.default:checked + .slider {
+    background-color: #444;
+  }
+
+ #meet1{
+    padding-right: 250px;
+     /* text-align: right; */  
+ }
+
+ #meet2{
+     padding-right: 250px;
+ }
+
+ #book{
+     text-align: center;
+     /* padding: left; */
+ }
+
+ #start1{
+     padding-right: 250px;
+ }
+#contact{
+    padding-right: 250px;
+}
+
+
+
+
+/* @brand-primary: #29b5a8;
+@brand-secondary: #ff8300;
+@gray: #6b7381;
+@gray-light: lighten(@gray, 15%);
+@gray-lighter: lighten(@gray, 30%);;
+
+// Button Colors
+@btn-default-color: @gray;
+@btn-default-bg: @gray-lighter;
+
+// Toggle Sizes
+@toggle-default-size: 1.5rem;
+@toggle-default-label-width: 4rem;
+@toggle-default-font-size: .75rem; */
+
+
+/* // General Styles for Demo */
+/* body {
+font-family: 'Montserrat', 'Lato', 'Open Sans', 'Helvetica Neue', Helvetica, Calibri, Arial, sans-serif;
+color: gray;
+background: #f2f2f2;
+} */
+.jumbotron {
+  background: gray;
+  color: gray-lighter;}
+  h1 {
+    color: #fff;
+  
+}
+.example {
+  margin: 4rem auto;}
+   .row {
+    margin-top: 2rem;
+    height: 5rem;
+    vertical-align: middle;
+    text-align: center;
+    border: 1px solid fade(gray-lighter,50%);}
+    .first-of-type {
+      border:none;
+      height: auto;
+      text-align: left;
+    }
+  
+  h3 {
+    font-weight: 400;}
+     small {
+      font-weight: 200;
+      font-size: .75em;
+      color: gray-light;
+    }
+  
+  h6 {
+    font-weight: 700;
+    font-size: .65rem;
+    letter-spacing: 3.32px;
+    text-transform: uppercase;
+    color: gray-lighter;
+    margin: 0;
+    line-height:5rem;
+  }
+  .btn-toggle {
+    top: 50%;
+    transform: translateY(-50%);
+  }
