--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -12,8 +12,8 @@ background-image: linear-gradient(15deg, #fff 0%, #35d187 100%);
 }
 
 .card {
-    width: 33%;
-    height: 30rem;
+    width: 40%;
+    height: 40rem;
     align-items: center;
     margin: auto;
 }
@@ -22,6 +22,7 @@ background-image: linear-gradient(15deg, #fff 0%, #35d187 100%);
     padding-left: 45px;
     padding-right: 45px;
 }
+
 
 .form-group {
     margin-top: 35px;
@@ -173,4 +174,7 @@ text-align: center;
     font-size: 40px;
     text-align: center;
     color: #fff;
+}
+#meetPoint{
+
 }
