--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -32,10 +32,16 @@ background-image: linear-gradient(15deg, #fff 0%, #35d187 100%);
   margin: auto;
 } */
  
-#signup-card {
+#signup-card, #login-card{
   padding-left: 50px;
   padding-right: 50px;
+  width: 100%;
 }
+/* #signup-card {
+  height: 43rem;
+  padding-left: 45px;
+  padding-right: 45px;
+} */
 
 .form-group {
   margin-top: 20px;
@@ -51,12 +57,13 @@ background-image: linear-gradient(15deg, #fff 0%, #35d187 100%);
   align-items: center;
   padding-left: 50px;
   padding-right: 50px;
+  height: 100%;
 }
 
 .btn {
   background-color: #35d187;
   border: 0;
-  margin-top: 60px;
+  margin-top: 20px;
   margin-bottom: 20px;
   border-radius: 10px;
 }
@@ -183,27 +190,22 @@ h5 {
 .form-inputs {
   margin-bottom: 10px;
 }
-   
-#signup-card {
-    height: 43rem;
-    padding-left: 45px;
-    padding-right: 45px;
-}
-
-
-.form-group {
-    margin-top: 35px;
-}
 
 .main {
     background-color: #35d187;
     padding: 50px;
     height: 9999px;
 }
-.main-signup {
+/* .main-signup {
     background-color: #35d187;
     padding: 50px;
     height: 100%;
+} */
+.main-card-login{
+  height: 22em;
+}
+#login-card{
+  height: 22em;
 }
 
 .btn {
@@ -288,6 +290,10 @@ a {
     background-color: transparent;
 }
 
+.password-reset{
+  color:#000;
+}
+
 a:hover {
     color: #007bff;
     text-decoration: none;
@@ -314,20 +320,20 @@ footer {
 .availHead{
    text-align: center;
    padding-top: 30px;
-    font-weight: 400;
+   font-weight: 400;
 }
 
 .subavail{
-color: #35d187;
-text-align: center;
- font-weight: 400;}
+  color: #35d187;
+  text-align: center;
+  font-weight: 400;}
 
 .availlist{
-    padding: 200px;
+  padding: 200px;
 }
 
 #book{
-    padding-right: 350px;
+  padding-right: 350px;
 }
 
 .requests {
@@ -342,6 +348,17 @@ text-align: center;
     text-align: center;
     color: #fff;
 }
-/* #meetPoint{
-
+#booking-card{
+  /* padding-left: 50px; */
+  /* padding-right: 50px; */
+  width: 60%;
+  height: 46em;
+}
+/* #card-body{
+   padding-left: 50px;
+  padding-right: 50px;
 } */
+
+.pagn{
+  color:#000;
+}
